# scitao

./: .gitignore  AUTHORS.txt  LICENSE  Makefile.am  README.md  bootstrap  builder.sce  configure.ac  loader.sce  win-builder.sce
demos/: Makefile.am  Makefile.in  diagram_1.cosf  diagram_2.cosf  diagram_3.cosf  diagram_4.cosf  diagram_5.cosf  diagrams.dem  optics.dem  scripts.dem  scrpt_1.sce  scrpt_10.sce  scrpt_2.sce  scrpt_3.sce  scrpt_4.sce  scrpt_5.sce  scrpt_6.sce  scrpt_7.sce
examples/: Makefile.am  Makefile.in  Michelson_interferometer.sce  Twyman-Green_shearing_interferometer.sce  aperture_screen.sce  atm_layer.cosf  beam_mix.cosf  display.cosf  distribution.sci  emitter.cosf  fft.cosf  geometry.cosf  interp.cosf  lens.cosf  optical_information_processing.sce  phase_reconstruction.sce  propagation_in_lens-like_absorptive_medium.sce  radial_shearing_interferometer.sce  rotational_shearing_interferometer.sce  scao.cosf  scintillation_simulation.sce  shearing_interferometer.sce  simple_interferometer.sce  single_conjugate_adaptive_optics.sce  split.cosf  turbulence_simulation.sce  unstable_laser_resonator.sce  young.cosf  young_interferometer.sce  zernike_filter.sce
macros/: ABSORBER.sci  APERTURE.sci  ATMOSPHERE.sci  CLONE.sci  CONTROLLER.sci  CONVERT.sci  DF_MIRROR.sci  DIAGNOSE.sci  DISPLAY.sci  DISPLAY_ANIM.sci  EMITTER.sci  FILE_FITS.sci  GAUSS.sci  GEOMETRY.sci  HARTMANN.sci  INTERPOLATE.sci  LENS.sci  MIXER.sci  Makefile.am  Makefile.in  NORMAL.sci  Optics.cosf  PIP_FFT.sci  PROPAGATE.sci  RECONSTRUCTOR.sci  SPLITTER.sci  START.sci  TT_MIRROR.sci  ZERNIKE.sci  anim_display.sci  field_plot.sci  fitsinfo.sci  fitsread.sci  scao_ui.sci
man/: Makefile.am  Makefile.in  builder.sce  loader.sce  sao_xmltohtml.sci
man/eng/: Makefile.am  Makefile.in
man/eng/optics/: Makefile.am  Makefile.in  absorber.xml  actuator_array.xml  annul_ap.xml  aperture_transform.xml  atm_mod_lay_heights.xml  atm_mod_lay_number.xml  atm_mod_layers_fits.xml  atm_mod_lays_transform.xml  b_mix.xml  b_split.xml  begin.xml  c_scilab.xml  circ_ap.xml  circ_screen.xml  circle.xml  convert.xml  create_field.xml  create_shcentroids.xml  cros_out.xml  dm_pi_controller.xml  dm_pi_update.xml  dm_update.xml  dwf_clip_array.xml  dwf_fits.xml  ell_cer_pac_mod.xml  ell_mau_kea_mod.xml  emitter.xml  exponent_inner.xml  far_fraunhoffer.xml  far_fresnel.xml  field_contents.xml  field_int.xml  field_pha.xml  field_plot.xml  fil_ter.xml  file_int.xml  file_pgm.xml  file_pha.xml  (+112 more)
man/eng/optics_scicos/: Makefile.am  Makefile.in  absorber.xml  animate.xml  aperture.xml  atmosphere.xml  clone.xml  controller.xml  convert.xml  df_mirror.xml  diagnose.xml  display.xml  emitter.xml  fft.xml  file_fits.xml  gauss.xml  geometry.xml  hartmann.xml  interpolate.xml  lens.xml  mixer.xml  normal.xml  propagate.xml  reconstructor.xml  scicos_rev.xsl  splitter.xml  start.xml  tt_mirror.xml  zernike.xml
src/: Makefile.am  Makefile.in  scao.c
src/arroyo/: AO_algo.cpp  AO_algo.h  AO_cpp.h  AO_sim_base.cpp  AO_sim_base.h  CMakeLists.txt  Cn2_distribution.cpp  Cn2_distribution.h  Dereferenced.h  Ellerbroek_Cerro_Pachon_model.cpp  Ellerbroek_Cerro_Pachon_model.h  Ellerbroek_Mauna_Kea_model.cpp  Ellerbroek_Mauna_Kea_model.h  Gemini_GLAO_study_model.cpp  Gemini_GLAO_study_model.h  Hufnagel_Valley_model.cpp  Hufnagel_Valley_model.h  Makefile.am  Makefile.in  NGAO_system_design_model.cpp  NGAO_system_design_model.h  PALAO_reconstructor.cpp  PALAO_reconstructor.h  Palomar_model.cpp  Palomar_model.h  SLCSAT_model.cpp  SLCSAT_model.h  Shack_Hartmann_centroids.cpp  Shack_Hartmann_centroids.h  TMT_SRD_v13_Cn2_model.cpp  TMT_SRD_v13_Cn2_model.h  ao_simulation.h  aperture.cpp  aperture.h  aplusplus_reconstructor.cpp  aplusplus_reconstructor.h  arcadia_mcao_reconstructor.cpp  arcadia_mcao_reconstructor.h  arroyo.h  arroyo_least_squares_reconstructor.cpp  (+98 more)
src/arroyo/win-util/: LibScilab.def  LibScilab.exp  LibScilab.lib  Makefile.am  Makefile.in  cfitsio.def  cfitsio.lib  lapack.def  lapack.exp  lapack.lib  some_defines.h
src/interf/: Makefile.am  Makefile.in  aperture_int.c  atmospheric_model_int.c  controller_int.c  deformable_mirror_int.c  emitter_int.c  geometry_int.c  int_arroyo.h  int_lightPipes.h  int_optics.c  int_optics.h  int_others.h  lightPipes_int.c  others_int.c  propagation_int.c  reconstructor_int.c  refractive_layer_int.c  scao_simulation_int.c  shack_hartmann_int.c  some_util_int.c  tip_tilt_mirror_int.c  wavefront_int.c  wind_model_int.c  zernike_int.c
src/lightPipes/: Makefile.am  Makefile.in  absorber.c  b_mix.c  b_split.c  begin.c  builder.sce  c_scilab.c  circ_ap.c  circ_screen.c  convert.c  cros_out.c  fft_prop.c  fftn.c  fftn.h  fil_ter.c  file_int.c  file_pgm.c  file_pha.c  file_ps.c  forvard.c  forward.c  fresnel.c  frsn_prop.c  gauss.c  gauss_screen.c  int_pha.c  interp1.c  interpol.c  l_amplif.c  lens.c  lens_forvard.c  lens_fresn.c  lightPipes.h  normal.c  pip_fft.c  pipes.c  pipes.h  random.c  rect_ap.c  (+7 more)
src/scicos/: Lens.c  Makefile.am  Makefile.in  absorber.c  aperture.c  atmosphere.c  controller.c  convert.c  df_mirror.c  diagnose.c  display.c  emitter.c  file_fits.c  gauss.c  geometry.c  hartmann.c  interpolate.c  mixer.c  normal.c  optics_scicos.c  optics_scicos.h  pip_fft.c  propagate.c  reconstructor.c  splitter.c  start.c  tt_mirror.c  zernike.c
src/wrapper/: Makefile.am  Makefile.in  aperture.cpp  aperture.h  arroyo_wrap.h  atmospheric_model.cpp  atmospheric_model.h  builder.sce  controller.cpp  controller.h  deformable_mirror.cpp  deformable_mirror.h  emitter.cpp  emitter.h  geometry.cpp  geometry.h  propagation.cpp  propagation.h  reconstructor.cpp  reconstructor.h  refractive_layer.cpp  refractive_layer.h  scao_simulation.cpp  shack_hartmann.cpp  shack_hartmann.h  simulation.cpp  simulation.h  some_utils.cpp  some_utils.h  tip_tilt_mirror.cpp  tip_tilt_mirror.h  wavefront.cpp  wavefront.h  wind_model.cpp  wind_model.h  zernike.cpp  zernike.h
