##
## -------------------------------------------------------------------------
## scitao - Scilab/Scicos Adaptive Optics toolbox
## Copyright (C) 2006  IAPCM, Beijing, China.
## Some inspiration came from SIP's contribution 
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  
## See the GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software Foundation,
## Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
## -------------------------------------------------------------------------
##

demos = diagram_1.cosf diagram_2.cosf diagram_3.cosf diagram_4.cosf diagram_5.cosf diagrams.dem optics.dem scripts.dem scrpt_10.sce scrpt_1.sce scrpt_2.sce scrpt_3.sce scrpt_4.sce scrpt_5.sce scrpt_6.sce scrpt_7.sce scrpt_8.sce scrpt_9.sce

demosdir = @TOOLBOXDIR@/demos

demos_DATA = $(demos) 
EXTRA_DIST = $(demos)

