##
## -------------------------------------------------------------------------
## scitao - Scilab/Scicos Adaptive Optics toolbox
## Copyright (C) 2006  IAPCM, Beijing, China.
## Some inspiration came from SIP's contribution 
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  
## See the GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software Foundation,
## Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
## -------------------------------------------------------------------------
##

examples = aperture_screen.sce atm_layer.cosf beam_mix.cosf define_phase_and_intensity_filters.sce display.cosf distribution.sci emitter.cosf fft.cosf geometry.cosf interp.cosf lens.cosf Michelson_interferometer.sce optical_information_processing.sce phase_reconstruction.sce propagation_in_lens-like_absorptive_medium.sce radial_shearing_interferometer.sce rotational_shearing_interferometer.sce scao.cosf scintillation_simulation.sce shearing_interferometer.sce simple_interferometer.sce single_conjugate_adaptive_optics.sce split.cosf turbulence_simulation.sce Twyman-Green_shearing_interferometer.sce unstable_laser_resonator.sce young.cosf young_interferometer.sce zernike_filter.sce

examplesdir = @TOOLBOXDIR@/examples

examples_DATA = $(examples)
EXTRA_DIST = $(examples)

