##
## -------------------------------------------------------------------------
## scitao - Scilab/Scicos Adaptive Optics toolbox
## Copyright (C) 2006  IAPCM, Beijing, China.
## Some inspiration came from SIP's contribution 
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  
## See the GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software Foundation,
## Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
## -------------------------------------------------------------------------
##

macros_sci = ABSORBER.sci anim_display.sci APERTURE.sci ATMOSPHERE.sci CLONE.sci CONTROLLER.sci CONVERT.sci DF_MIRROR.sci DIAGNOSE.sci DISPLAY_ANIM.sci DISPLAY.sci EMITTER.sci field_plot.sci FILE_FITS.sci fitsinfo.sci fitsread.sci GAUSS.sci GEOMETRY.sci HARTMANN.sci INTERPOLATE.sci LENS.sci MIXER.sci NORMAL.sci PIP_FFT.sci PROPAGATE.sci RECONSTRUCTOR.sci scao_ui.sci SPLITTER.sci START.sci TT_MIRROR.sci ZERNIKE.sci

macrodir=@TOOLBOXDIR@/macros
macro_DATA = $(macros_sci) Optics.cosf
EXTRA_DIST = $(macros_sci) Optics.cosf
