##
## -------------------------------------------------------------------------
## scitao - Scilab/Scicos Adaptive Optics toolbox
## Copyright (C) 2006  IAPCM, Beijing, China.
## Some inspiration came from sip's contribution 
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  
## See the GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software Foundation,
## Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
## -------------------------------------------------------------------------
##

utils = cfitsio.def cfitsio.dll cfitsio.lib fftw3.dll fftw3.exp fftw3.h fftw3.lib fftw3.map fitsio.h lapack.def lapack.dll lapack.exp lapack.lib LibScilab.def LibScilab.dll LibScilab.exp LibScilab.lib longnam.h some_defines.h

utilsdir = @TOOLBOXDIR@/src/arroyo/win-util
EXTRA_DIST = $(utils)

